examples/test/testpolicy6160.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6160
  namespace: namespace68
spec:
  podSelector:
    matchLabels:
      key25: value27
      key39: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value2
          key8: value39
          key46: value17
      podSelector:
        matchLabels:
          key8: value19
